{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 32,
  "lineage": "b7551dd0-b094-fb3c-9dba-ebe6e115b512",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09748abeb7370d1bc",
            "arn": "arn:aws:ec2:us-east-1:555065207695:instance/i-0405ed6d4b05e896a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "prod-globo-web-app-38924-ec2_read_s3_profile",
            "id": "i-0405ed6d4b05e896a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03b47e139b6de8d9a",
            "private_dns": "ip-10-1-0-115.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.0.115",
            "public_dns": "ec2-54-87-154-55.compute-1.amazonaws.com",
            "public_ip": "54.87.154.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c2c0e79b21a973f3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-017075dd322219950",
            "tags": {
              "Name": "prod-globo-web-app-ec2-1",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "prod-globo-web-app-ec2-1",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03cd8a2d34fec9ccc"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.main",
            "data.aws_ssm_parameter.amzn2_linux",
            "module.s3.aws_iam_instance_profile.ec2_read_s3_profile",
            "module.s3.aws_iam_role.ec2_read_s3_role",
            "module.s3.aws_iam_role_policy.read_s3_policy",
            "module.s3.aws_s3_bucket.website_bucket",
            "module.s3.aws_s3_bucket_policy.allow_elb_write_access_logs",
            "module.s3.data.aws_iam_policy_document.allow_elb_write_access_logs",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09748abeb7370d1bc",
            "arn": "arn:aws:ec2:us-east-1:555065207695:instance/i-0601e7331ad2dc8c6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "prod-globo-web-app-38924-ec2_read_s3_profile",
            "id": "i-0601e7331ad2dc8c6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00f68d5ea0741ca35",
            "private_dns": "ip-10-1-1-38.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.38",
            "public_dns": "ec2-18-207-166-198.compute-1.amazonaws.com",
            "public_ip": "18.207.166.198",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06cac8d455f0bec57",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-022dffead034c22fe",
            "tags": {
              "Name": "prod-globo-web-app-ec2-2",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "prod-globo-web-app-ec2-2",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03cd8a2d34fec9ccc"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.main",
            "data.aws_ssm_parameter.amzn2_linux",
            "module.s3.aws_iam_instance_profile.ec2_read_s3_profile",
            "module.s3.aws_iam_role.ec2_read_s3_role",
            "module.s3.aws_iam_role_policy.read_s3_policy",
            "module.s3.aws_s3_bucket.website_bucket",
            "module.s3.aws_s3_bucket_policy.allow_elb_write_access_logs",
            "module.s3.data.aws_iam_policy_document.allow_elb_write_access_logs",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "prod-globo-web-app-38924",
                "enabled": true,
                "prefix": "lb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:555065207695:loadbalancer/app/prod-globo-web-app-lb/f9cfb51ed358f0d0",
            "arn_suffix": "app/prod-globo-web-app-lb/f9cfb51ed358f0d0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "prod-globo-web-app-lb-1081244306.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:555065207695:loadbalancer/app/prod-globo-web-app-lb/f9cfb51ed358f0d0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-globo-web-app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e0b9499499bfced3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-012d643df68154c29"
              },
              {
                "subnet_id": "subnet-017075dd322219950"
              },
              {
                "subnet_id": "subnet-022dffead034c22fe"
              }
            ],
            "subnets": [
              "subnet-012d643df68154c29",
              "subnet-017075dd322219950",
              "subnet-022dffead034c22fe"
            ],
            "tags": {
              "Name": "prod-globo-web-app-lb",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "prod-globo-web-app-lb",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "vpc_id": "vpc-0c4d6b57c38701b76",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb_sg",
            "data.aws_availability_zones.available",
            "module.s3.aws_s3_bucket.website_bucket",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:555065207695:listener/app/prod-globo-web-app-lb/f9cfb51ed358f0d0/ae333c926615767b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:555065207695:targetgroup/prod-globo-web-app-tg/c80374f6ff5405fd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:555065207695:listener/app/prod-globo-web-app-lb/f9cfb51ed358f0d0/ae333c926615767b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:555065207695:loadbalancer/app/prod-globo-web-app-lb/f9cfb51ed358f0d0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "prod-globo-web-app-listener",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "prod-globo-web-app-listener",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx_lb",
            "aws_lb_target_group.nginx_tg",
            "aws_security_group.lb_sg",
            "data.aws_availability_zones.available",
            "module.s3.aws_s3_bucket.website_bucket",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:555065207695:targetgroup/prod-globo-web-app-tg/c80374f6ff5405fd",
            "arn_suffix": "targetgroup/prod-globo-web-app-tg/c80374f6ff5405fd",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:555065207695:targetgroup/prod-globo-web-app-tg/c80374f6ff5405fd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-globo-web-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "prod-globo-web-app-tg",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "prod-globo-web-app-tg",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c4d6b57c38701b76"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:555065207695:targetgroup/prod-globo-web-app-tg/c80374f6ff5405fd-20230802091856796200000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:555065207695:targetgroup/prod-globo-web-app-tg/c80374f6ff5405fd",
            "target_id": "i-0405ed6d4b05e896a"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.nginx_tg",
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.main",
            "data.aws_ssm_parameter.amzn2_linux",
            "module.s3.aws_iam_instance_profile.ec2_read_s3_profile",
            "module.s3.aws_iam_role.ec2_read_s3_role",
            "module.s3.aws_iam_role_policy.read_s3_policy",
            "module.s3.aws_s3_bucket.website_bucket",
            "module.s3.aws_s3_bucket_policy.allow_elb_write_access_logs",
            "module.s3.data.aws_iam_policy_document.allow_elb_write_access_logs",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:555065207695:targetgroup/prod-globo-web-app-tg/c80374f6ff5405fd-20230802091857116000000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:555065207695:targetgroup/prod-globo-web-app-tg/c80374f6ff5405fd",
            "target_id": "i-0601e7331ad2dc8c6"
          },
          "dependencies": [
            "aws_instance.nginx",
            "aws_lb_target_group.nginx_tg",
            "aws_security_group.nginx_sg",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.main",
            "data.aws_ssm_parameter.amzn2_linux",
            "module.s3.aws_iam_instance_profile.ec2_read_s3_profile",
            "module.s3.aws_iam_role.ec2_read_s3_role",
            "module.s3.aws_iam_role_policy.read_s3_policy",
            "module.s3.aws_s3_bucket.website_bucket",
            "module.s3.aws_s3_bucket_policy.allow_elb_write_access_logs",
            "module.s3.data.aws_iam_policy_document.allow_elb_write_access_logs",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_integer.rand"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:security-group/sg-0e0b9499499bfced3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0b9499499bfced3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-globo-web-app-lb-sg",
            "name_prefix": "",
            "owner_id": "555065207695",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-globo-web-app-lb-sg",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "prod-globo-web-app-lb-sg",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4d6b57c38701b76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:security-group/sg-03cd8a2d34fec9ccc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03cd8a2d34fec9ccc",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod-globo-web-app-ec2-sg",
            "name_prefix": "",
            "owner_id": "555065207695",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-globo-web-app-ec2-sg",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "prod-globo-web-app-ec2-sg",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4d6b57c38701b76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:network-acl/acl-0ece70853a35af28b",
            "default_network_acl_id": "acl-0ece70853a35af28b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ece70853a35af28b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "555065207695",
            "subnet_ids": [
              "subnet-012d643df68154c29",
              "subnet-017075dd322219950",
              "subnet-022dffead034c22fe"
            ],
            "tags": {
              "Name": "prod-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "prod-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "vpc_id": "vpc-0c4d6b57c38701b76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:route-table/rtb-0bf2f0392e7344c37",
            "default_route_table_id": "rtb-0bf2f0392e7344c37",
            "id": "rtb-0bf2f0392e7344c37",
            "owner_id": "555065207695",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "prod-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "prod-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0c4d6b57c38701b76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:security-group/sg-067c023c71e169c39",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-067c023c71e169c39",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "555065207695",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "prod-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "vpc_id": "vpc-0c4d6b57c38701b76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:internet-gateway/igw-00b27a12048b4342b",
            "id": "igw-00b27a12048b4342b",
            "owner_id": "555065207695",
            "tags": {
              "Name": "prod-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "prod-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "vpc_id": "vpc-0c4d6b57c38701b76"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00b27a12048b4342b",
            "id": "r-rtb-02bc8bc088e7df2e51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02bc8bc088e7df2e5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:route-table/rtb-02bc8bc088e7df2e5",
            "id": "rtb-02bc8bc088e7df2e5",
            "owner_id": "555065207695",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "prod-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4d6b57c38701b76"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0803d360d6e5c6925",
            "route_table_id": "rtb-02bc8bc088e7df2e5",
            "subnet_id": "subnet-017075dd322219950"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d7a06b762a9b6ba",
            "route_table_id": "rtb-02bc8bc088e7df2e5",
            "subnet_id": "subnet-022dffead034c22fe"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b434041695157a0e",
            "route_table_id": "rtb-02bc8bc088e7df2e5",
            "subnet_id": "subnet-012d643df68154c29"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:subnet/subnet-017075dd322219950",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017075dd322219950",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "555065207695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "prod-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "vpc_id": "vpc-0c4d6b57c38701b76"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:subnet/subnet-022dffead034c22fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022dffead034c22fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "555065207695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "prod-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "vpc_id": "vpc-0c4d6b57c38701b76"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:subnet/subnet-012d643df68154c29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012d643df68154c29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "555065207695",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "prod-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "vpc_id": "vpc-0c4d6b57c38701b76"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:555065207695:vpc/vpc-0c4d6b57c38701b76",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0ece70853a35af28b",
            "default_route_table_id": "rtb-0bf2f0392e7344c37",
            "default_security_group_id": "sg-067c023c71e169c39",
            "dhcp_options_id": "dopt-0aad078b2c96e0168",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c4d6b57c38701b76",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bf2f0392e7344c37",
            "owner_id": "555065207695",
            "tags": {
              "Name": "prod-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "prod-globo-web-app-vpc",
              "billing_code": "ACCT8675309",
              "company": "Globomantics",
              "environment": "prod",
              "project": "Globomantics-globo-web-app",
              "terraform": "true"
            }
          }
        }
      ]
    }
  ]
}